# blocksalat

./: CMakeLists.txt
src/: main.cpp  main_console.cpp  main_sfml.cpp
src/core/: Board.cpp  Board.h  Game.cpp  Game.h  Tetromino.cpp  Tetromino.h
src/ui/: IInputHandler.h  IRenderer.h
src/ui/console/: ConsoleInputHandler.cpp  ConsoleInputHandler.h  ConsoleRenderer.h
src/ui/inputhandler/: ConsoleInputHandler.h  IInputHandler.h
src/ui/renderer/: ConsoleRenderer.cpp  ConsoleRenderer.h
